# pygration

./: .gitignore  LICENSE  README.md  pygration_cli.py  pyproject.toml  requirements.txt
pygration/: __init__.py  pygration.py
