[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygration"
version = "0.0.6"
description = "Pygration is a powerful and easy-to-use database migration library, designed to simplify the process of managing and applying database schema changes"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Vladyslav Haiduk", email = "the.vladhaiduk@gmail.com" }]
dependencies = ["python-dotenv", "psycopg2"]

[project.scripts]
pygration = "pygration_cli:main"

[tool.setuptools]
py-modules = ["pygration_cli"]
packages = ["pygration"]

[tool.isort]
profile = "black"
